fix: better font spacing

--- a/assets/css/3.elemets.css
+++ b/assets/css/3.elemets.css
@@ -1,6 +1,7 @@
 body {
   background: var(--brown-1);
   color: var(--brown-2);
+  line-height: 1.5;
 }
 
 h1 {
@@ -20,18 +21,19 @@ h2 {
 h3 {
   font-family: "DM Serif Display", serif;
   font-size: var(--step-1);
-  line-height: 1em;
+  line-height: 1.25;
   margin-bottom: 1rem;
 }
 
 h4 {
   font-family: "Poppins", sans-serif;
+  font-size: var(--step-0);
 }
 
 ul,
 p {
   margin-bottom: 1rem;
-  font-size: var(--step--0);
+  font-size: var(--step-0);
 }
 
 /* Sane Defaults https://twitter.com/csswizardry/status/1717841334462005661 */
